2010-04-04  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Improve compatibility with global-font-lock mode.
	(twittering-mode-init-global): use `bold' instead of
	`font-lock-string-face' if it has not been bound yet.
	`twittering-mode' does not require loading `font-lock'.
	(twittering-mode-setup): prevent `global-font-lock-mode' enabling
	`font-lock-mode' by using buffer-local `font-lock-global-modes'.
	`twittering-mode' can be used with/without any configuration for
	font-lock mode.

	* twittering-mode.el: Replace hard-coded hostnames with
	variables and functions. Thanks to William Xu.
	(twittering-api-host): new variable.
	(twittering-api-search-host): new variable.
	(twittering-web-host): new variable.
	(twittering-get-search-url): new function.
	(twittering-make-clickable-status-datum): call
	`twittering-get-search-url' instead of using hard-coded hostname.

	* twittering-mode.el (twittering-start-http-session-curl): do not
	overwrite headers that `curl' will define internally. Thanks to
	William Xu.

2010-04-03  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-buffer-active-p): renamed
	`twittering-buffer-related-p'.

	* twittering-mode.el (twittering-start): check the value of
	`twittering-timer-for-redisplaying' before setting timer.

	* twittering-mode.el: Multiple buffers are supported.
	(twittering-buffer-info-list): new variable for managing multiple
	buffers.
	(twittering-buffer): both of the function and the variable are
	removed.
	(twittering-update-mode-line): remove timeline spec from mode-line
	because it is displayed as the name of buffer.
	(twittering-switch-timeline): removed.
	(twittering-get-buffer-list): new function.
	(twittering-get-active-buffer-list): new function.
	(twittering-buffer-related-p): modified to support multiple buffers.
	(twittering-buffer-p): new function.
	(twittering-buffer-active-p): new function.
	(twittering-get-buffer-from-spec): new function.